Fixed gap and message for issue --> Confusing message for when no baseline expression for tissues is reported.

--- a/web/src/main/webapp/resources/css/atlas.css
+++ b/web/src/main/webapp/resources/css/atlas.css
@@ -301,6 +301,7 @@ ul#gxaLocalNav a:hover, ul#gxaLocalNav a:active, ul#gxaLocalNav li.active a {
 
 .block {
     padding-top: 1em;
+    min-height: 0px !important;
 }
 
 .block-max-width {
